logs/scribes.edit.complete-like-eclipse.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gsignals'...
Listing './lib/python3.5/site-packages/gsignals-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scribes'...
Listing './lib/python3.5/site-packages/scribes/edit'...
Listing './lib/python3.5/site-packages/scribes/edit/complete_like_eclipse'...
Listing './lib/python3.5/site-packages/scribes/edit/complete_like_eclipse/IndexerProcess'...
Compiling './lib/python3.5/site-packages/scribes/edit/complete_like_eclipse/IndexerProcess/IndexerProcessMonitor.py'...
***   File "./lib/python3.5/site-packages/scribes/edit/complete_like_eclipse/IndexerProcess/IndexerProcessMonitor.py", line 30
    print "Ooops! Found another completion indexer, killing this one."
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scribes/edit/complete_like_eclipse/ProcessCommunicator.py'...
***   File "./lib/python3.5/site-packages/scribes/edit/complete_like_eclipse/ProcessCommunicator.py", line 59
    print "ERROR:No word completion indexer process found"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/scribes/helpers'...
Listing './lib/python3.5/site-packages/scribes.edit.complete_like_eclipse-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/scribes.helpers-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './scribes'...
Listing './scribes/plugins'...
Compiling './scribes/plugins/PluginCompleteLikeEclipse.py'...
Listing './share'...
Listing './share/python-wheels'...
